--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.css
@@ -9,6 +9,16 @@
     /*-fx-border-color: black;*/
 }
 
+.chart-vertical-grid-lines {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.5;
+}
+
+.chart-horizontal-grid-lines {
+    -fx-stroke: black;
+    -fx-stroke-width: 0.5;
+}
+
 /*.chart-series-area-line {*/
 /*    !*-fx-stroke: BLACK;*!*/
 /*    -fx-stroke: transparent;*/
