--- a/src/main/resources/ru/nucodelabs/gem/view/main/CalculateErrorScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/CalculateErrorScreen.fxml
@@ -42,7 +42,8 @@
                             <Label text="Формулы"/>
                         </HBox>
                     </VBox>
-                    <LineChart title="График погрешности" HBox.hgrow="ALWAYS" fx:id="chart">
+                    <LineChart animated="false"
+                               title="График погрешности" HBox.hgrow="ALWAYS" fx:id="chart">
                         <xAxis>
                             <LogarithmicAxis label="%ab2">
                             </LogarithmicAxis>
@@ -103,9 +104,18 @@
                                 </Label>
                             </graphic>
                         </TableColumn>
-                        <TableColumn fx:id="rhoACol" sortable="false">
+                        <TableColumn fx:id="resCol" sortable="false">
                             <graphic>
                                 <Label text="%resistanceApparent">
+                                    <tooltip>
+                                        <Tooltip text="%resistanceApparentFull"/>
+                                    </tooltip>
+                                </Label>
+                            </graphic>
+                        </TableColumn>
+                        <TableColumn fx:id="resAvgCol" sortable="false">
+                            <graphic>
+                                <Label text="%resistanceApparentAvg">
                                     <tooltip>
                                         <Tooltip text="%resistanceApparentFull"/>
                                     </tooltip>
