mathves upd macos + authors

--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -59,7 +59,10 @@
                                        disable="${controller.noFileOpened}"/>
                     </Menu>
                     <Menu text="%help">
-                        <MenuItem text="%about"/>
+                        <fx:define>
+                            <fx:include fx:id="authorsWindow" source="Authors.fxml"/>
+                        </fx:define>
+                        <MenuItem text="%authors" onAction="#openAuthors"/>
                     </Menu>
                 </MenuBar>
                 <StackPane maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS">
