--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -62,7 +62,7 @@
                         <fx:define>
                             <fx:include fx:id="authorsWindow" source="Authors.fxml"/>
                         </fx:define>
-                        <MenuItem text="%authors" onAction="#openAuthors"/>
+                        <MenuItem text="%about" onAction="#openAuthors"/>
                     </Menu>
                 </MenuBar>
                 <StackPane maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS">
