--- a/src/main/resources/ru/nucodelabs/gem/view/main/Authors.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/Authors.fxml
@@ -9,38 +9,37 @@
     <scene>
         <Scene>
             <VBox maxWidth="600" style="-fx-padding: 25;" spacing="5">
-                <Label styleClass="window-header">
-                    Авторы
-                </Label>
+                <Label style="-fx-font-size: 20;">О программе</Label>
+                <Label text="%version"/>
                 <Label prefWidth="600" style="-fx-font-size: 16;">
                     Куратор проекта
                 </Label>
                 <Label prefWidth="600">
-                    к.т.н., доцент кафедры СИ ФИТ НГУ, Александр Власов
+                    • к.т.н., доцент кафедры СИ ФИТ НГУ, Александр Власов
                 </Label>
                 <Label prefWidth="600" style="-fx-font-size: 16;">
-                    Студенты 3-ого курса ФИТ НГУ
+                    Студенты 3-го курса ФИТ НГУ (20214)
                 </Label>
                 <Label prefWidth="600">
-                    Вадим Евгеньевич Мостовой
+                    • Вадим Евгеньевич Мостовой
                 </Label>
                 <Label>
-                    Михаил Константинович Плугин
+                    • Михаил Константинович Плугин
                 </Label>
                 <Label>
-                    Никита Сергеевич Батенко
+                    • Никита Сергеевич Батенко
                 </Label>
                 <Label prefWidth="600" style="-fx-font-size: 16;">
                     Сотрудники лаборатории электромагнитных полей ИНГГ СО РАН
                 </Label>
                 <Label prefWidth="600">
-                    Илья Олегович Шапаренко
+                    • Илья Олегович Шапаренко
                 </Label>
                 <Label>
-                    Нина Николаевна Неведрова
+                    • Нина Николаевна Неведрова
                 </Label>
                 <Label>
-                    Андрей Юрьевич Соболев
+                    • Андрей Юрьевич Соболев
                 </Label>
             </VBox>
         </Scene>
