--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -60,7 +60,7 @@
                     </Menu>
                     <Menu text="%help">
                         <fx:define>
-                            <fx:include fx:id="authorsWindow" source="Authors.fxml"/>
+                            <fx:include fx:id="authorsWindow" source="About.fxml"/>
                         </fx:define>
                         <MenuItem text="%about" onAction="#openAuthors"/>
                     </Menu>
