--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?language groovy?>
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -7,7 +8,7 @@
       maxHeight="Infinity"
       maxWidth="Infinity"
       stylesheets="@../common.css"
-      VBox.vgrow="ALWAYS"
+      VBox.vgrow="ALWAYS" fx:id="root"
       fx:controller="ru.nucodelabs.gem.view.tables.ModelTableController">
     <!--    <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-padding: 5" HBox.hgrow="ALWAYS">-->
     <!--        <Button fx:id="deleteBtn" text="Удалить выбранное" onAction="#deleteSelected" disable="true">-->
@@ -26,8 +27,25 @@
                     <Button fx:id="copyFromLeftBtn" text="Использовать предыдущую" onAction="#copyFromLeft"/>
                     <Button fx:id="copyFromRightBtn" text="Использовать следующую" onAction="#copyFromRight"/>
                 </HBox>
+                <HBox alignment="CENTER" spacing="3">
+                    <Button text="%pasteFromClipboard" onAction="#pasteFromClipboard"/>
+                    <fx:script>
+                        import javafx.scene.control.Alert
+                        import javafx.scene.layout.VBox
+                        import ru.nucodelabs.gem.view.tables.ModelTableControllerKt
+
+                        def showHelp() {
+                            Alert help = new Alert(Alert.AlertType.INFORMATION,
+                                    ModelTableControllerKt.MOD_HELP_PASTE)
+                            help.title = "Допустимый формат данных"
+                            help.headerText = "Допустимый формат данных"
+                            help.initOwner((root as VBox).scene.window)
+                            help.show()
+                        }
+                    </fx:script>
+                    <Button text="?" onAction="showHelp()"/>
+                </HBox>
                 <Button text="Первичная модель" onAction="#makePrimaryModel"/>
-                <Button text="%pasteFromClipboard" onAction="#pasteFromClipboard"/>
                 <HBox alignment="BASELINE_CENTER" VBox.vgrow="NEVER">
                     <VBox alignment="BASELINE_CENTER">
                         <Button text="%import" onAction="#importMOD"/>
