--- a/src/main/resources/ru/nucodelabs/gem/view/main/NormalizationScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NormalizationScreen.fxml
@@ -32,7 +32,7 @@
                         </columns>
                     </TableView>
                 </HBox>
-                <Button text="Применить"/>
+                <Button text="Применить" onAction="#apply"/>
             </VBox>
         </Scene>
     </scene>
