ImageLineChart added + test

--- a/src/main/resources/ru/nucodelabs/gem/view/main/About.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/About.fxml
@@ -44,6 +44,8 @@
                 <Label>
                     • Андрей Юрьевич Соболев
                 </Label>
+                <Label text=" "/>
+                <Hyperlink text="https://yandex.ru/legal/maps_termsofuse"/>
             </VBox>
         </Scene>
     </scene>
