--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -15,6 +15,9 @@
        width="1280"
        height="720"
        title="GEM" onShown="initLayoutConfig()">
+    <fx:define>
+        <fx:include source="AnisotropyMainView.fxml" fx:id="anisotropyMainView"/>
+    </fx:define>
     <fx:script>
         import javafx.scene.control.SplitPane
         import javafx.scene.input.KeyCodeCombination
@@ -72,6 +75,11 @@
             authorsWindow.icons.setAll(root.icons)
             authorsWindow.show()
         }
+
+        def openAnisotropyMainView() {
+            anisotropyMainView.icons.setAll(root.icons)
+            anisotropyMainView.show()
+        }
     </fx:script>
     <icons>
         <Image url="@../../../../../img/gem.png"/>
@@ -83,6 +91,7 @@
                     <Menu text="%file">
                         <MenuItem text="%addPicket" onAction="#addNewPicket"/>
                         <MenuItem text="%newWindow" onAction="#newWindow" accelerator="Shift+Shortcut+N"/>
+                        <MenuItem text="Режим работы с анизотропией" onAction="openAnisotropyMainView()"/>
                         <MenuItem text="%openSection" fx:id="menuFileOpenSection" onAction="#openJsonSection"
                                   accelerator="Shortcut+O"/>
                         <MenuItem text="Импортировать пикет" onAction="#importJsonPicket"/>
