Добавил информацию об авторах

--- a/src/main/resources/ru/nucodelabs/gem/view/main/About.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/About.fxml
@@ -18,7 +18,7 @@
                     Куратор проекта
                 </Label>
                 <Label prefWidth="600">
-                    • к.т.н., доцент кафедры СИ ФИТ НГУ, Александр Власов
+                    • к.т.н., доцент кафедры СИ ФИТ НГУ, с.н.с. лаборатории электромагнитных полей ИНГГ СО РАН Александр Александрович Власов
                 </Label>
                 <Label prefWidth="600" style="-fx-font-size: 16;">
                     Студенты 3-го курса ФИТ НГУ (20214)
@@ -43,6 +43,9 @@
                 </Label>
                 <Label>
                     • Андрей Юрьевич Соболев
+                </Label>
+                <Label>
+	            • Для моделирования сигналов ВЭЗ использованы программные модули Юлия Александровича Дашевского из системы SONET
                 </Label>
                 <Label text=" "/>
                 <Hyperlink text="https://yandex.ru/legal/maps_termsofuse"/>
