--- a/src/main/resources/ru/nucodelabs/gem/view/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/AnisotropyMainView.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
@@ -13,14 +16,19 @@
         <Scene stylesheets="@../common.css, @../charts/MapPseudoSection.css">
             <VBox fx:id="root">
                 <HBox spacing="10">
-                    <ImageScatterChart fx:id="satChart" legendVisible="false">
-                        <xAxis>
-                            <NucodeNumberAxis autoRanging="false"/>
-                        </xAxis>
-                        <yAxis>
-                            <NucodeNumberAxis autoRanging="false"/>
-                        </yAxis>
-                    </ImageScatterChart>
+                    <VBox spacing="10" style="-fx-padding: 25;">
+                        <ImageScatterChart fx:id="satChart" legendVisible="false">
+                            <xAxis>
+                                <NucodeNumberAxis autoRanging="false"/>
+                            </xAxis>
+                            <yAxis>
+                                <NucodeNumberAxis autoRanging="false"/>
+                            </yAxis>
+                        </ImageScatterChart>
+                        <Label text="Масштаб"/>
+                        <TextField fx:id="scaleTf" promptText="Масштаб" maxWidth="100"/>
+                        <Button text="Применить" onAction="#applyScale" maxWidth="100"/>
+                    </VBox>
                     <SmartInterpolationMap fx:id="interpolChart" legendVisible="false" prefWidth="500" minWidth="500"
                                            maxWidth="500" prefHeight="500" maxHeight="500" minHeight="500">
                         <xAxis>
