--- a/src/main/resources/ru/nucodelabs/gem/view/charts/LinearModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/LinearModelSection.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import ru.nucodelabs.gem.view.control.chart.NucodeNumberAxis?>
-<?import ru.nucodelabs.gem.view.control.chart.PolygonChart?>
+<?import ru.nucodelabs.gem.view.control.chart.PolygonNames?>
 <?import ru.nucodelabs.gem.view.main.UIConstantsKt?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       alignment="CENTER"
@@ -16,7 +16,7 @@
     <HBox alignment="CENTER_LEFT">
         <Label fx:id="title" text="Модель, разрез" styleClass="chart-label"/>
     </HBox>
-    <PolygonChart fx:id="chart" maxWidth="Infinity"
+    <PolygonNames fx:id="chart" maxWidth="Infinity"
                   maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart"
                   VBox.vgrow="ALWAYS">
         <xAxis>
@@ -31,5 +31,5 @@
                 </prefWidth>
             </NucodeNumberAxis>
         </yAxis>
-    </PolygonChart>
+    </PolygonNames>
 </VBox>
