--- a/src/main/resources/ru/nucodelabs/gem/view/charts/LogarithmicModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/LogarithmicModelSection.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import ru.nucodelabs.gem.view.control.chart.log.PseudoLogarithmicAxis?>
 <?import ru.nucodelabs.gem.view.control.chart.NucodeNumberAxis?>
-<?import ru.nucodelabs.gem.view.control.chart.PolygonChart?>
+<?import ru.nucodelabs.gem.view.control.chart.PolygonWithNamesChart?>
 <?import ru.nucodelabs.gem.view.main.UIConstantsKt?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17"
       alignment="CENTER"
@@ -17,7 +17,7 @@
     <HBox alignment="CENTER_LEFT">
         <Label fx:id="title" text="Модель, разрез" styleClass="chart-label"/>
     </HBox>
-    <PolygonChart fx:id="chart" maxWidth="Infinity"
+    <PolygonWithNamesChart fx:id="chart" maxWidth="Infinity"
                   maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart"
                   VBox.vgrow="ALWAYS">
         <xAxis>
@@ -31,5 +31,5 @@
                 </prefWidth>
             </PseudoLogarithmicAxis>
         </yAxis>
-    </PolygonChart>
+    </PolygonWithNamesChart>
 </VBox>
